---------------------------------------------------------------------------------------------------
Version: 2.1.10
Date: ?
  Changes:
    - added desulfurizator-unit-mk04
---------------------------------------------------------------------------------------------------
Version: 2.1.9
Date: 2023-7-25
  Changes:
    - update chinese translation. credit sdqwo
    - tweaked the aromatics from naphthalene oil recipe. increased naphthalene oil input( 50 -> 75). increased aromatics output(30 -> 40)
---------------------------------------------------------------------------------------------------
Version: 2.1.8
Date: 2023-4-16
  Changes:
    - Prevent a crash when another mod deletes the stone resource prototype.
---------------------------------------------------------------------------------------------------
Version: 2.1.7
Date: 2023-3-28
  Changes:
    - Added migration to ensure existing bitumen seeps are set to sane amounts
    - naphthalene creosote recipe to creosote tech
    - moved pure nat gas recipe to filter machine
    - buffed nat gas output from raw gas recipe
  Bugfixes:
    - Fixed case where removing a seep via editor would cause a crash
---------------------------------------------------------------------------------------------------
Version: 2.1.5
Date: 2023-1-31
  Changes:
    - fixed crashes with bitumen
    - retorter now has fixed_recipe = 'kerogen-extraction'
    - added more module slots to bitumen mk2 mk3 mk4
    - fixed that all bitumen mines were the same speed
    - added text to the bitumen mines saying how close they were to opening
    - allowed prod modules in mines
    - added tholins and bitumen seep to pywiki
---------------------------------------------------------------------------------------------------
Version: 2.1.4
Date: 2022-12-19
  Changes:
    - fixed that copper and iron from tailings wasnt properly disabled.
    - fixed several double unlocks in techs.